[package]
name = "rust-web-scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio
tokio = { version = "1.15", features = ["full", "tracing"] }
# reqwest
reqwest = { version = "0.11", features = ["json"] }
axum = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0"